# file-retrieval-system

./: .env.example  .gitignore  README.md  dummy.py  obed.ipynb  pyproject.toml  requirements.txt
files/client/: data.csv
files/server/: hello.txt
scripts/: run-client.sh  run-server.sh  run-test.sh
src/file_retrieval_system/: client.py  server.py
src/file_retrieval_system/keys/: privateKey.pem  publicKey.pem
src/file_retrieval_system/utils/: constants.py  encryptions.py  exceptions.py
