[tool.poetry]
name = "file-retrieval-system"
version = "0.1.0"
description = ""
authors = ["horlali <gideon.ahiadzi@gmail.com>"]
readme = "README.md"
packages = [{include = "file_retrieval_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyro4 = "^4.82"
streamlit = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
