[tool.poetry]
name = "file-retrieval-system"
version = "0.1.0"
description = ""
authors = ["horlali <gideon.ahiadzi@gmail.com>"]
readme = "README.md"
packages = [{include = "file_retrieval_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyro4 = "4.82"
streamlit = "1.23.1"
pycryptodome = "3.18.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
coverage = "7.2.7"
pytest-cov = "4.1.0"
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
